--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -39,5 +39,49 @@
         android:id="@+id/benevitsFragment"
         android:name="com.example.socio_infonavit_android_new.ui.benevits.BenevitsFragment"
         android:label="fragment_benevits"
-        tools:layout="@layout/fragment_benevits" />
+        tools:layout="@layout/fragment_benevits" >
+        <action
+            android:id="@+id/action_benevitsFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment"
+            app:enterAnim="@anim/slide_from_right"
+            app:exitAnim="@anim/slide_to_left"
+            app:popEnterAnim="@anim/slide_from_left"
+            app:popExitAnim="@anim/slide_to_rigth" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.example.socio_infonavit_android_new.ui.benevits.MovieDetailFragment"
+        android:label="fragment_movie_detail"
+        tools:layout="@layout/fragment_movie_detail" >
+        <argument
+            android:name="posterImageUrl"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="backGroundImageUrl"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="voteAverage"
+            app:argType="float" />
+        <argument
+            android:name="VoteCount"
+            app:argType="integer" />
+        <argument
+            android:name="overView"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="title"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="language"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="releaseDate"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 </navigation>
