--- a/app/src/main/res/layout/fragment_benevits.xml
+++ b/app/src/main/res/layout/fragment_benevits.xml
@@ -12,4 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ProgressBar
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/progressMovie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
+    </ProgressBar>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
