--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.benevits.MovieDetailFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/red"
+        app:titleTextColor="@color/white">
+
+    </androidx.appcompat.widget.Toolbar>
+
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="match_parent"
@@ -13,7 +25,7 @@
         android:background="@drawable/gradient"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <ImageView
             android:id="@+id/imgBackGround"
@@ -50,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="321dp" />
+        app:layout_constraintGuide_begin="351dp" />
 
     <TextView
         android:id="@+id/txtTitleMovie"
@@ -92,6 +104,8 @@
         android:layout_marginTop="8dp"
         android:drawablePadding="8dp"
         app:layout_constraintTop_toBottomOf="@id/txtRating"
+        android:ellipsize="end"
+        android:lines="1"
         tools:text="02/12/2021 Release">
     </TextView>
 
