--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -34,6 +34,8 @@
                 android:layout_height="wrap_content"
                 tools:text="@string/movie_title"
                 android:textColor="@color/white"
+                android:ellipsize="end"
+                android:lines="1"
                 android:layout_margin="5dp">
             </TextView>
 
